# prm-fastapi-aiservice

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  main.py  manage.py  mkdocs.yml  pyproject.toml  requirements.txt
.codebuddy/: summary.md
.github/workflows/: ci.yml  deploy-docs.yml
app/: config.py  dependencies.py  main.py  middleware.py  models.py  router.py  service.py
app/auth/: auth.py  dependencies.py  quota_service.py  router.py  schemas.py  service.py
app/category/: mixins.py  router.py  schemas.py  service.py
app/core/: ai_service.py  config.py  health_checks.py  logger.py  logging_formatter.py  redis.py  registrar.py
app/keywords/: keywords.py  models.py  router.py
app/middleware/: consume_tokens.py  consumed_tokens.py  enforce_quota.py  token_extraction.py
app/project/: dependencies.py  router.py  schemas.py  service.py  service2.py
app/prompts/: definitions.txt  risk_prompt.txt
app/risk/: __init__.py  mixins.py  router.py  schemas.py  service.py
app/services/: base_service.py  models.py  risk_definition_check.py  risk_identification.py  router.py  services.py
app/utils/: cache.py  schema.py
docs/: authentication.md  error_handling.md  index.md  resilient_execution.md  services_and_routes.md  tasks.md
prompts/: add__project-opportunities__categories.txt  add__project-risks__categories.txt  check-project-context.txt  create__project-opportunities__categories.txt  create__project-risks__categories.txt  identify-risk-for-category.txt  risk-definition-check.txt  risk-drivers.txt  risk-impact.txt  risk-likelihood.txt  risk-mitigation.txt  summarize-project.txt
src/: main.py  router.py
src/auth/: auth.py  customer_service.py  dependencies.py  entitlement_service.py  quota_service.py  schemas.py  service.py  subject_service.py  token_consumption_service.py  token_quota_service_provider.py
src/category/: __init__.py  riskgpt_service.py  schemas.py  service.py
src/context/: schemas.py  service.py
src/core/: ai_service.py  config.py  health_checks.py  redis.py  registrar.py
src/keywords/: keywords.py  models.py  router.py
src/middleware/: authorization_middleware.py  custom_error_format.py  middleware_mixins.py  service_bypass.py  token_entitlement_check.py  token_entitlement_middleware.py  token_extraction.py  user_token_extraction.py
src/project/: schemas.py  service.py
src/risk/: __init__.py  riskgpt_service.py  schemas.py  service.py
src/routes/: __init__.py  registrar.py  route_registry.py  router_factory.py  service_handler.py  validation.py
src/services/: __init__.py  base_service.py  context_service.py  risk_service.py  riskgpt_base_service.py  riskgpt_services.py  services.py
src/utils/: cache.py  circuit_breaker.py  exceptions.py  openmeter_error_handler.py  resilient.py  schema.py
src/utils/logutils/: __init__.py  config.py  formatters.py  setup.py
tests/: conftest.py  test_auth_header.py  test_basis.py  test_category_router.py  test_context_router.py  test_discover_services.py  test_exceptions.py  test_keyword_router.py  test_local_environment.py  test_logger.py  test_mocking_example.py  test_project_router.py  test_risk_bias_check.py  test_risk_communication.py  test_risk_correlation_tags.py  test_risk_cost_benefit.py  test_risk_identification.py  test_risk_monitoring.py  test_risk_opportunity.py  test_risk_prioritization.py  test_risk_router.py  test_risk_workflows.py  test_router.py  test_router_factory.py  test_service.py  test_service_auth.py  test_token_extraction.py  test_utils.py
tests/core/: test_route_registry.py  test_service_handler.py  test_validation.py
tests/e2e/: test_openmeter_integration.py  test_openmeter_services_integration.py  test_risk_definition_check_token_consumption.py
tests/fixtures/: auth.py  client.py  env.py  meter.py  mock_openmeter.py  quota.py
tests/logutils/: test_config.py  test_formatters.py  test_integration.py  test_setup.py
tests/plugins/: webtest.py
tests/router/: test_logger.py  test_route_registry.py  test_router_factory.py  test_service_handler.py  test_validation.py
tests/services/: test_base_service.py  test_openmeter.py  test_service_registration.py  test_services_chains.py
tests/utils/: test_circuit_breaker.py  test_exceptions.py  test_resilient.py  test_utils.py
