[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = ""
authors = ["thwolter <thwolter@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_service"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
uvicorn = "^0.31.1"
langchain = "^0.3.3"
langchain-openai = "^0.2.2"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"
pytest = "^8.3.3"
yake = {git = "https://github.com/LIAAD/yake"}
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
diskcache = "^5.6.3"
aioredis = "^2.0.1"
langchain-community = "^0.3.13"
pyjwt = "^2.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
isort = "^5.13.2"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "webtest: marks tests that access external APIs (select with '-m webtest')",
    "tryfirst: marks tests that should be run first",
]